--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
 <head>
     <!-- other head elements -->
-    <script src="{{ '/assets/js/abstract-toggle.js' | relative_url }}"></script>
+    <script defer src="{{ '/assets/js/abstract-toggle.js' | relative_url }}"></script>
 </head>
