--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ body {
 /* Links */
 a {
     text-decoration: none;
-    color: #330066;
+    color: #8C1515;
 }
 
 a:hover {
@@ -25,11 +25,11 @@ a:hover {
 }
 
 a:active {
-    color: #330066;
+    color: #8C1515;
 }
 
 a:visited {
-    color: #330066;
+    color: #8C1515;
 }
 
 /* Headers */
@@ -112,7 +112,7 @@ body {
     margin: 0.5em 0;
     padding: 0.75em;
     background-color: #f5f5f5;
-    border-left: 3px solid #330066;
+    border-left: 3px solid #8C1515;
     font-size: 0.9em;
 }
 
@@ -123,9 +123,9 @@ body {
     padding: 0.2em 0.5em;
     font-size: 0.9em;
     cursor: pointer;
-    color: #330066;
+    color: #8C1515;
     background: none;
-    border: 1px solid #330066;
+    border: 1px solid #8C1515;
     border-radius: 3px;
 }
 
@@ -146,7 +146,7 @@ body {
 
 /* PDF links */
 .pdf-link {
-    color: #330066;
+    color: #8C1515;
     font-weight: bold;
 }
 
